--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-.text{
-  margin-top: 2;
-  margin-bottom: 1.5;
+a{
+  box-shadow: none;
+  color: aqua;
 }
